[project]
name = "pedaldrivenprogramming"
version = "3.0.0"
dependencies = [
    "Django",
    "django-storages[s3]",
    "dj-database-url",
    "gunicorn",
    "markdown",
    "Pillow",
    "psycopg",
    "Pygments",
    "python-frontmatter",
    "whitenoise[brotli]",
]

[project.optional-dependencies]
dev = [
    "django-stubs",
    "pip-tools",
    "ruff",
    "watchfiles"
]

[tool.setuptools]
py-modules = []
